2 Traffic - Starting Files/6-istio-rules.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: fleetman-staff-service # just a name of virtual service, does not matter what it called
  namespace: default
  uid: daad2207-5442-4fb9-913a-33d80fe2827b
  resourceVersion: '150615'
  generation: 1
  creationTimestamp: '2022-08-19T08:23:30Z'
  labels:
    kiali_wizard: weighted_routing
  managedFields:
    - manager: Go-http-client
      operation: Update
      apiVersion: networking.istio.io/v1alpha3
      time: '2022-08-19T08:23:30Z'
spec:
  hosts:
    - fleetman-staff-service.default.svc.cluster.local # service DNS name 
    # - fleetman-staff-service.<namespace>.svc.cluster.local
  http:
    - route:
        - destination:
            host: fleetman-staff-service.default.svc.cluster.local # target DNS name
            subset: safe-group # pointed to the name defined in destination rule
          weight: 90
        - destination:
            host: fleetman-staff-service.default.svc.cluster.local # target DNS name
            subset: risky-group
          weight: 10
